# construction-analyzer

./: .cursorignore  .env.example  .gitignore  .pre-commit-config.yaml  Bob the Builder.pptx.pptx  Makefile  README.md  docker-compose.yml  report_guide.md
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: config.py  main.py  schemas.py
backend/app/agent/: checkpointer.py  graph.py  llm.py  tools.py
backend/app/api/: chat.py  health.py  ingest.py  reports.py  threads.py
backend/app/kb/: base.py  fake.py  memorypalace.py
backend/app/services/: converted_drawing_elements.py  document_analysis.py  document_elements.py  document_registry.py  docx_elements.py  element_memory.py  engineering_converters.py  engineering_files.py  ingestion.py  ocr_elements.py  parsers.py  report_drafter.py  report_exporter.py  report_pipeline.py  report_planner.py  report_projection.py  report_retriever.py  report_sessions.py  report_validator.py  table_elements.py  visual_elements.py  xlsx_elements.py
backend/backend/data/: smoke-registry.sqlite  smoke-report-sessions.sqlite
backend/tests/: _fakes.py  conftest.py
backend/tests/integration/: test_app_state.py  test_chat_endpoint.py  test_engineering_project_ingestion.py  test_health.py  test_ingest_endpoint.py  test_memorypalace_kb.py  test_report_full_path.py  test_reports_endpoint.py  test_thread_persistence.py  test_threads_api.py
backend/tests/unit/: test_agent_graph.py  test_agent_tools.py  test_checkpointer.py  test_converted_drawing_elements.py  test_document_analysis.py  test_document_elements.py  test_document_registry.py  test_docx_elements.py  test_element_memory.py  test_engineering_converter_smoke.py  test_engineering_converters.py  test_engineering_files.py  test_ingestion.py  test_kb_fake.py  test_llm_factory.py  test_ocr_elements.py  test_parsers.py  test_report_drafter.py  test_report_exporter.py  test_report_pipeline.py  test_report_planner.py  (+7 more)
(+61 files in other folders)
