[project]
name = "construction-analyzer-backend"
version = "0.1.0"
description = "FastAPI + LangGraph backend with MemoryPalace knowledge base"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.12",
    "httpx>=0.27.0",
    "sse-starlette>=2.1.3",
    # LangGraph stack
    "langgraph>=0.2.40",
    "langgraph-checkpoint-sqlite>=2.0.1",
    "langchain-core>=0.3.15",
    "langchain-openai>=0.2.10",
    "langchain-ollama>=0.2.0",
    # Document loaders
    "pypdf>=5.0.1",
    "reportlab>=4.2.5",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    "markdown-it-py>=3.0.0",
    # Postgres / pgvector for MemoryPalace integration tests
    # MemoryPalace's SQLAlchemy uses sync `postgresql://` URLs which default
    # to psycopg2. asyncpg is used by /ready for non-blocking probes.
    "psycopg2-binary>=2.9.10",
    "psycopg[binary]>=3.2.3",
    "asyncpg>=0.30.0",
    "pgvector>=0.3.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "respx>=0.21.1",
    "anyio>=4.6.2",
    "ruff>=0.7.4",
    "mypy>=1.13.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
markers = [
    "integration: tests that require real external services (Postgres + Ollama)",
    "e2e: end-to-end tests against a running compose stack",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "S"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S106"]
